--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -1,10 +1,19 @@
 html{
     background-color: #093656;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
 }
 
 h2{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+h4 {
+    padding: 0px;
+}
+
+input {
+    padding: 0px;
 }
