--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -1,19 +1,27 @@
-html{
+html {
     background-color: #093656;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
 }
 
-h2{
+h2 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-h4 {
-    padding: 0px;
+label {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 input {
-    padding: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+a {
+    color: rgb(232, 232, 232);
 }
