--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -1,10 +1,47 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 html{
     background-color: #093656;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+/*body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
 
 h2{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+
+button{ /* button aesthetics */
+    margin: 100;
+    padding: 100;
+    font-size: 45px;
+    background-color: #1F7928;
+    color: white;
+    font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.button{
+    padding-left: 300px;
+}
+
+.frontPhotos{
+    align-items: center;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    top: 0;
+    left: 200;
+    margin: 10px;
+    padding: 5px;
+}
+
+.scrolltext{
+    text-align: center;
+    color: white;
 }
