--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -66,7 +66,6 @@ a {
 hr {
     margin-left: 3%;
     margin-right: 3%;
-    margin-top: 5%;
     border: 1px solid #5c5c5c;
 }
 
@@ -86,7 +85,8 @@ div.graphFlex {
 
 footer {
     width: 100%;
-    margin-top: 32px;
+    margin-top: 22px;
+    margin-bottom: 22px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
