--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -5,6 +5,16 @@ html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
 }
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.mainContent {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 3%
+}
 /*body {
     display: flex;
     flex-direction: column;
@@ -18,7 +28,8 @@ h2 {
     
 }
 
-button{ /* button aesthetics */
+/*
+button{ 
     margin: 100;
     padding: 100;
     font-size: 45px;
@@ -26,9 +37,16 @@ button{ /* button aesthetics */
     color: white;
     font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+*/
 
-.button{
-    padding-left: 300px;
+button {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-top: 8px;
 }
 
 .frontPhotos{
@@ -48,6 +66,7 @@ button{ /* button aesthetics */
 }
 
 label {
+    font-size: 18px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -55,8 +74,9 @@ label {
 input {
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding: 4px;
+    font-family: monospace;
+    font-size: 18px;
 }
 
 a {
@@ -66,12 +86,13 @@ a {
 hr {
     margin-left: 3%;
     margin-right: 3%;
+    margin-top: 64px;
     border: 1px solid #5c5c5c;
 }
 
 div.graph {
     display: block;
-    width: 70%;
+    width: 50%;
 }
 
 div.graphFlex {
