--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -15,7 +15,7 @@ html {
 .mainContent {
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 3%
+    margin-top: 5%
 }
 
 button {
@@ -46,6 +46,11 @@ input {
 
 a {
     color: rgb(232, 232, 232);
+}
+
+.errortext {
+    margin-top: 20px;
+    color:rgb(235, 64, 52)
 }
 
 hr {
