--- a/shylesheet_oceantides.css
+++ b/shylesheet_oceantides.css
@@ -15,7 +15,8 @@ html {
 .mainContent {
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 5%
+    margin-top: 5%;
+    margin-bottom: 10%;
 }
 
 button {
